--- a/src/components/AboutCompany/AboutCompany.module.css
+++ b/src/components/AboutCompany/AboutCompany.module.css
@@ -2,7 +2,7 @@
 }
 
 .cutElement {
-  width: 639px;
+  width: 267px;
   height: 60px;
   background: var(--white);
   border: none;
@@ -10,29 +10,59 @@
   margin-bottom: -1px;
 }
 
+@media screen and (min-width: 1440px) {
+  .cutElement {
+    width: 639px;
+  }
+}
+
 .wrapper {
-  padding: 0 80px;
+  padding: 0 16px;
   background: var(--white);
+}
+
+@media screen and (min-width: 1440px) {
+  .wrapper {
+    padding: 0 80px;
+  }
 }
 
 .container {
-  max-width: 1440px;
-  margin: 0 auto;
-  height: 280px;
   display: flex;
+  flex-direction: column;
+  padding: 40px 0 60px;
+  height: auto;
+  text-align: center;
   align-items: center;
-  background: var(--white);
-  padding: 56px 0 92px;
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+    height: 280px;
+    flex-direction: row;
+    align-items: center;
+    padding: 56px 0 92px;
+  }
 }
 
 .textContainer {
-  margin-right: 237px;
+  margin-right: 0;
+  margin-bottom: 40px;
+  text-align: start;
+}
+
+@media screen and (min-width: 1440px) {
+  .textContainer {
+    margin-right: 237px;
+  }
 }
 
 .title {
   font-family: var(--font-family);
   font-weight: 700;
-  font-size: 44px;
+  font-size: 28px;
   line-height: 127%;
   letter-spacing: -0.04em;
   text-transform: uppercase;
@@ -40,8 +70,14 @@
   margin-bottom: 40px;
 }
 
+@media screen and (min-width: 1440px) {
+  .title {
+    font-size: 44px;
+  }
+}
+
 .text {
-  width: 413px;
+  width: 100%;
   height: auto;
   font-family: var(--font-family);
   font-weight: 400;
@@ -51,42 +87,90 @@
   opacity: 0.8;
 }
 
+@media screen and (min-width: 1440px) {
+  .text {
+    width: 413px;
+  }
+}
+
 .infoWrapper {
-  border-radius: 4px;
-  height: 244px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 356px;
+  height: auto;
   background: var(--purple);
-  padding: 32px 64px;
+  border-radius: 4px;
+}
+
+@media screen and (min-width: 1440px) {
+  .infoWrapper {
+    padding: 32px 64px;
+    width: 603px;
+  }
 }
 
 .textForm {
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 28px;
   line-height: 129%;
   letter-spacing: -0.04em;
   text-align: center;
   color: var(--white);
-  margin-bottom: 32px;
-  width: 502px;
-  height: 72px;
+  width: 324px;
+  font-size: 22px;
+  margin-bottom: 20px;
+  margin-top: 16px;
+}
+
+@media screen and (min-width: 1440px) {
+  .textForm {
+    margin-bottom: 32px;
+    font-size: 28px;
+    width: 502px;
+    height: 72px;
+    margin-top: 0;
+  }
 }
 
 .form {
+  display: flex;
   position: relative;
   width: 100%;
+  justify-content: center;
 }
 
 .inputWrapper {
   display: flex;
-  width: 498px;
-  position: relative;
+  width: 100%;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+@media screen and (min-width: 1440px) {
+  .inputWrapper {
+    display: flex;
+    width: 498px;
+    position: relative;
+  }
+}
+
+.inputContainer {
+  display: flex;
+  width: 324px;
+}
+@media screen and (min-width: 1440px) {
+  .inputContainer {
+    display: flex;
+    width: 498px;
+  }
 }
 
 .input {
   border-radius: 8px;
   width: 100%;
   height: 60px;
-  padding: 4px 200px 4px 16px;
+  padding: 8px 100px 8px 16px;
   background: #4a3bb3;
   margin-bottom: 24px;
   color: var(--white);
@@ -95,10 +179,25 @@
   font-size: 20px;
 }
 
+@media screen and (min-width: 1440px) {
+  .input {
+    border-radius: 8px;
+    width: 100%;
+    height: 60px;
+    padding: 4px 200px 4px 16px;
+    background: #4a3bb3;
+    margin-bottom: 24px;
+    color: var(--white);
+    border: none;
+    outline: none;
+    font-size: 20px;
+  }
+}
+
 .input::placeholder {
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 125%;
   letter-spacing: -0.01em;
   text-transform: uppercase;
@@ -117,13 +216,11 @@
 }
 
 .btn {
-  position: absolute;
-  top: 8px;
-  right: 8px;
   border: 1px solid var(--q);
-  border-radius: 4px;
+
+  border-radius: 3px;
   padding: 16px 24px;
-  width: 165px;
+  width: 324px;
   height: 52px;
   box-shadow: 0 0 4px 0 var(--q);
   background: var(--q);
@@ -135,62 +232,22 @@
   text-transform: uppercase;
   color: #030718;
   cursor: pointer;
+  margin-bottom: 16px;
+}
+
+@media screen and (min-width: 1440px) {
+  .btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    padding: 16px 24px;
+    width: 165px;
+    height: 52px;
+    margin-bottom: 0;
+  }
 }
 
 .btn:hover {
   background: rgba(87, 225, 255, 0.2);
   color: var(--q);
-}
-
-@media (max-width: 768px) {
-  .wrapper {
-    padding: 0 20px;
-  }
-
-  .container {
-    flex-direction: column;
-    padding: 40px 0 60px;
-    height: auto;
-    text-align: center;
-  }
-
-  .textContainer {
-    margin-right: 0;
-    margin-bottom: 32px;
-  }
-
-  .title {
-    font-size: 32px;
-    margin-bottom: 20px;
-  }
-
-  .text {
-    width: 100%;
-  }
-
-  .infoWrapper {
-    width: 100%;
-    padding: 24px;
-    height: auto;
-  }
-
-  .textForm {
-    width: 100%;
-    font-size: 22px;
-    margin-bottom: 20px;
-  }
-
-  .inputWrapper {
-    width: 100%;
-  }
-
-  .input {
-    width: 100%;
-    padding-right: 120px;
-  }
-
-  .btn {
-    width: 120px;
-    padding: 12px 16px;
-  }
 }
