--- a/src/components/DoitNow/DoitNow.module.css
+++ b/src/components/DoitNow/DoitNow.module.css
@@ -6,36 +6,50 @@
 .container {
   display: flex;
   align-items: center;
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 40px 80px;
-  gap: 235px;
+  padding: 16px;
+  flex-direction: column;
+  gap: 24px;
+  align-items: flex-start;
+}
+
+@media screen and (min-width: 1440px) {
+  .container {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 66px 80px;
+    gap: 235px;
+    flex-direction: row;
+  }
 }
 
 .text {
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 28px;
+  font-size: 20px;
   line-height: 129%;
   letter-spacing: -0.04em;
   color: var(--white);
-  width: 532px;
 }
 
-.infoWrapper {
+@media screen and (min-width: 1440px) {
+  .text {
+    font-size: 28px;
+    width: 532px;
+  }
 }
 
-.textForm {
-  font-family: var(--font-family);
-  font-weight: 500;
-  font-size: 28px;
-  line-height: 129%;
-  letter-spacing: -0.04em;
-  text-align: center;
-  color: var(--white);
-  margin-bottom: 32px;
-  width: 502px;
-  height: 72px;
+.inputWrapper {
+  display: flex;
+  width: 343px;
+  flex-wrap: wrap;
+}
+
+@media screen and (min-width: 1440px) {
+  .inputWrapper {
+    display: flex;
+    width: 522px;
+    position: relative;
+  }
 }
 
 .form {
@@ -43,17 +57,11 @@
   width: 100%;
 }
 
-.inputWrapper {
-  display: flex;
-  width: 522px;
-  position: relative;
-}
-
 .input {
   border-radius: 8px;
   width: 100%;
   height: 60px;
-  padding: 4px 200px 4px 16px;
+  padding: 4px 150px 4px 16px;
   background: #4a3bb3;
   color: var(--white);
   border: none;
@@ -83,17 +91,14 @@
 }
 
 .btn {
-  position: absolute;
-  top: 8px;
-  right: 8px;
   border: 1px solid var(--q);
-  border-radius: 4px;
-  padding: 16px 24px;
-  width: 230px;
-  height: 52px;
   box-shadow: 0 0 4px 0 var(--q);
   background: var(--q);
-
+  border-radius: 4px;
+  padding: 16px 24px;
+  position: relative;
+  width: 100%;
+  margin-top: 12px;
   font-family: var(--font-family);
   font-weight: 500;
   font-size: 16px;
@@ -103,40 +108,18 @@
   cursor: pointer;
 }
 
+@media screen and (min-width: 1440px) {
+  .btn {
+    position: absolute;
+    top: 8px;
+    right: 8px;
+    width: 230px;
+    height: 52px;
+    margin-top: 0;
+  }
+}
+
 .btn:hover {
   background: rgba(87, 225, 255, 0.2);
   color: var(--q);
-}
-
-@media (max-width: 768px) {
-  .doitNowSection {
-    padding: 32px 16px;
-  }
-
-  .doitNowSection .container {
-    flex-direction: column;
-    gap: 24px;
-    align-items: flex-start;
-  }
-
-  .text,
-  .textForm {
-    font-size: 20px;
-    width: 100%;
-  }
-
-  .inputWrapper {
-    width: 100%;
-  }
-
-  .input {
-    padding: 8px 12px;
-    font-size: 16px;
-  }
-
-  .btn {
-    position: static;
-    width: 100%;
-    margin-top: 12px;
-  }
 }
