--- a/src/components/Hero/Hero.module.css
+++ b/src/components/Hero/Hero.module.css
@@ -1,44 +1,85 @@
 .heroSection {
-  max-width: 1440px;
-  height: 678px;
   display: flex;
-  align-items: center;
-  padding: 0 80px;
-  margin: 0 auto;
+  flex-direction: column-reverse;
+  padding: 0 16px;
+  height: auto;
+  align-items: flex-start;
+  margin-top: 40px;
+}
+
+@media screen and (min-width: 1440px) {
+  .heroSection {
+    max-width: 1440px;
+    flex-direction: row;
+    padding: 164px 80px 134px 80px;
+    margin: 0 auto;
+  }
 }
 
 .content {
-  margin-right: 128px;
+  margin-right: 0;
+  margin-bottom: 32px;
+}
+
+@media screen and (min-width: 1440px) {
+  .content {
+    margin-right: 128px;
+  }
 }
 
 .imgage {
-  width: 469px;
-  height: 209px;
+  width: 300px;
+  height: 134px;
+  margin-bottom: 20px;
+}
+
+@media screen and (min-width: 1440px) {
+  .imgage {
+    width: 469px;
+    height: 209px;
+  }
 }
 
 .title {
+  width: 343px;
+  height: auto;
   font-family: var(--font-family);
   font-weight: 700;
-  font-size: 60px;
-  line-height: 120%;
+  font-size: 35px;
+  line-height: 126%;
   letter-spacing: -0.04em;
   text-transform: uppercase;
   color: var(--white);
-  width: 630px;
-  height: 216px;
   margin-bottom: 12px;
 }
 
+@media screen and (min-width: 1440px) {
+  .title {
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 60px;
+    line-height: 120%;
+    width: 630px;
+    height: 216px;
+  }
+}
+
 .text {
+  width: 100%;
+  font-size: 14px;
   font-family: var(--font-family);
   font-weight: 400;
   font-size: 16px;
   line-height: 125%;
   color: #e7f7f8;
-  opacity: 0.3;
-  width: 565px;
-  height: 40px;
   margin-bottom: 24px;
+}
+
+@media screen and (min-width: 1440px) {
+  .text {
+    width: 565px;
+    height: 40px;
+  }
 }
 
 .form {
@@ -48,21 +89,36 @@
 
 .inputWrapper {
   display: flex;
-  width: 500px;
   position: relative;
+  width: 100%;
+}
+
+@media screen and (min-width: 1440px) {
+  .inputWrapper {
+    width: 500px;
+  }
 }
 
 .input {
+  width: 100%;
+  height: 50px;
+  font-size: 16px;
   border-radius: 8px;
-  width: 500px;
-  height: 60px;
-  padding: 4px 100px 4px 16px;
+  padding: 4px 150px 4px 16px;
   background: #201a4f;
-  margin-bottom: 24px;
+  margin-bottom: 12px;
   color: var(--white);
   border: none;
   outline: none;
-  font-size: 20px;
+}
+
+@media screen and (min-width: 1440px) {
+  .input {
+    width: 500px;
+    height: 60px;
+    padding: 4px 100px 4px 16px;
+    font-size: 20px;
+  }
 }
 
 .input:hover,
@@ -93,9 +149,10 @@
   right: 8px;
   border: 1px solid var(--q);
   border-radius: 4px;
-  padding: 16px 24px;
-  width: 109px;
-  height: 52px;
+  width: 100px;
+  padding: 12px;
+  height: 42px;
+
   box-shadow: 0 0 4px 0 var(--q);
   background: var(--q);
 
@@ -122,50 +179,10 @@
   color: var(--q);
 }
 
-@media (max-width: 768px) {
-  .heroSection {
-    flex-direction: column;
-    padding: 0 20px;
-    height: auto;
-    text-align: center;
-  }
-
-  .content {
-    margin-right: 0;
-    margin-bottom: 32px;
-  }
-
-  .title {
-    width: 100%;
-    font-size: 34px;
-    line-height: 115%;
-    height: auto;
-  }
-
-  .text {
-    width: 100%;
-    font-size: 14px;
-    margin-bottom: 20px;
-  }
-
-  .imgage {
-    width: 80%;
-    height: auto;
-    margin-bottom: 20px;
-  }
-
-  .inputWrapper {
-    width: 100%;
-  }
-
-  .input {
-    width: 100%;
-    padding: 4px 100px 4px 12px;
-    font-size: 16px;
-  }
-
+@media screen and (min-width: 1440px) {
   .btn {
-    width: 100px;
-    padding: 12px;
+    padding: 16px 24px;
+    width: 109px;
+    height: 52px;
   }
 }
