--- a/src/components/TradebladeIt/TradebladeIt.module.css
+++ b/src/components/TradebladeIt/TradebladeIt.module.css
@@ -1,48 +1,92 @@
 .tradebladeItSection {
-  max-width: 1440px;
-  margin: 0 auto;
-  padding: 0 80px;
+  padding: 0 16px;
+}
+
+@media screen and (min-width: 1440px) {
+  .tradebladeItSection {
+    max-width: 1440px;
+    margin: 0 auto;
+    padding: 0 80px;
+  }
 }
 
 .container {
   padding: 96px 0 86px;
   display: flex;
+  flex-direction: column;
+  padding-top: 236px;
 }
 
-.content:nth-child(1) {
-  margin-bottom: 72px;
+@media screen and (min-width: 1440px) {
+  .container {
+    padding: 96px 0 86px;
+    display: flex;
+    flex-direction: row;
+  }
 }
 
-.content:nth-child(2) {
-  margin-bottom: 56px;
-}
+@media screen and (min-width: 1440px) {
+  .content:nth-child(1) {
+    margin-bottom: 72px;
+  }
 
-.content:nth-child(3) {
-  margin-bottom: 116px;
+  .content:nth-child(2) {
+    margin-bottom: 56px;
+  }
+
+  .content:nth-child(3) {
+    margin-bottom: 116px;
+  }
 }
 
 .title {
   font-family: var(--font-family);
   font-weight: 700;
-  font-size: 44px;
+  font-size: 28px;
   line-height: 127%;
+
   letter-spacing: -0.04em;
   text-transform: uppercase;
   color: var(--white);
-  margin-right: 128px;
+  margin-bottom: 40px;
+}
+
+@media screen and (min-width: 1440px) {
+  .title {
+    margin-right: 128px;
+    font-size: 44px;
+    margin-bottom: 0;
+  }
 }
 
 .contentContainer {
   display: flex;
-  flex-wrap: wrap;
-  column-gap: 21px;
+  flex-direction: column;
+  gap: 32px;
+}
+
+@media screen and (min-width: 1440px) {
+  .contentContainer {
+    flex-wrap: wrap;
+    column-gap: 21px;
+    flex-direction: row;
+    row-gap: 0;
+  }
 }
 
 .content {
-  width: 414px;
-  height: auto;
+  width: 100%;
   display: flex;
   gap: 32px;
+}
+
+@media screen and (min-width: 1440px) {
+  .content {
+    width: 414px;
+    height: auto;
+    display: flex;
+    gap: 32px;
+  }
 }
 
 .tradebladeItIcon {
@@ -54,25 +98,47 @@
 .wrapper {
   width: 325px;
   height: auto;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+@media screen and (min-width: 1440px) {
+  .wrapper {
+    width: 325px;
+    height: auto;
+  }
 }
 
 .contentTitle {
   font-family: var(--font-family);
   font-weight: 500;
-  font-size: 28px;
   line-height: 129%;
   letter-spacing: -0.04em;
   color: var(--white);
+  font-size: 20px;
+}
+
+@media screen and (min-width: 1440px) {
+  .contentTitle {
+    font-size: 28px;
+  }
 }
 
 .text {
   font-family: var(--font-family);
   font-weight: 400;
-  font-size: 16px;
+  font-size: 14px;
   line-height: 125%;
   color: var(--white);
   opacity: 0.8;
-  width: 324px;
+  width: 255px;
+}
+
+@media screen and (min-width: 1440px) {
+  .text {
+    font-size: 16px;
+  }
 }
 
 @media (max-width: 768px) {
@@ -80,41 +146,10 @@
     padding: 0 20px;
   }
 
-  .contentContainer {
-    flex-direction: column;
-    gap: 24px;
-  }
   .container {
     padding: 96px 0 86px;
     display: flex;
     flex-direction: column;
-  }
-  .content {
-    width: 100%;
-    flex-direction: column;
-    gap: 16px;
-  }
-
-  .wrapper {
-    width: 100%;
-  }
-
-  .title {
-    font-size: 32px;
-    margin-right: 0;
-  }
-
-  .contentTitle {
-    font-size: 24px;
-  }
-
-  .text {
-    width: 100%;
-    font-size: 14px;
-  }
-
-  .tradebladeItIcon {
-    width: 48px;
-    height: 48px;
+    padding-top: 236px;
   }
 }
